fix: overflow on class 700 PIS

--- a/src/components/displays/Class700/css/index.less
+++ b/src/components/displays/Class700/css/index.less
@@ -99,6 +99,8 @@
       }
 
       > .lightBlue {
+        overflow: hidden;
+
         font-size: 60px;
         line-height: 1.25;
 
@@ -141,6 +143,8 @@
       }
 
       > .lightBlue {
+        overflow: hidden;
+
         font-size: 60px;
         line-height: 1.25;
 
